# kijitrace

./: .gitignore  Cargo.toml  Dockerfile  Dockerfile.alpine  Dockerfile.bookworm  Dockerfile.wasm  Makefile  README.md  build.rs  compose.yml
.github/workflows/: ci.yml  wasm.yml
proto/: trace.proto
scripts/: ccr.sh
src/: main.rs  trace-client.rs  tracing-server.rs
src/support/: mod.rs
tests/: integration_1.rs
tests/common/: mod.rs
